--- a/_src/templates/index.html
+++ b/_src/templates/index.html
@@ -22,7 +22,79 @@
 
     </form>
     <main class="board">
+      <!-- <ul class="js-cards cards"></ul> -->
       <ul class="js-cards cards"></ul>
+      <!-- <table>
+        <tr>
+          <th>
+            <img src={logo} alt="foto-08"></img>
+          </th>
+          <th>
+            <img src={logo} alt="foto-08"></img>
+          </th>          
+          <th>
+            <img src={logo} alt="foto-08"></img>
+          </th>          
+          <th>
+            <img src={logo} alt="foto-08"></img>
+          </th>          
+          <th>
+            <img src={logo} alt="foto-08"></img>
+          </th>
+        </tr>
+        <tr>
+          <th>
+            <img src={logo} alt="foto-08"></img>
+          </th>
+          <th>
+            <img src={logo} alt="foto-08"></img>
+          </th>          
+          <th>
+            <img src={logo} alt="foto-08"></img>
+          </th>          
+          <th>
+            <img src={logo} alt="foto-08"></img>
+          </th>          
+          <th>
+            <img src={logo} alt="foto-08"></img>
+          </th>
+        </tr>
+        <tr>
+          <th>
+            <img src={logo} alt="foto-08"></img>
+          </th>
+          <th>
+            <img src={logo} alt="foto-08"></img>
+          </th>          
+          <th>
+            <img src={logo} alt="foto-08"></img>
+          </th>          
+          <th>
+            <img src={logo} alt="foto-08"></img>
+          </th>          
+          <th>
+            <img src={logo} alt="foto-08"></img>
+          </th>
+        </tr>
+        <tr>
+          <th>
+            <img src={logo} alt="foto-08"></img>
+          </th>
+          <th>
+            <img src={logo} alt="foto-08"></img>
+          </th>          
+          <th>
+            <img src={logo} alt="foto-08"></img>
+          </th>          
+          <th>
+            <img src={logo} alt="foto-08"></img>
+          </th>          
+          <th>
+            <img src={logo} alt="foto-08"></img>
+          </th>
+        </tr>
+      </table> -->
+
     </main>
     <script src="./assets/js/main.js"></script>
   </body>
