--- a/_src/assets/scss/main.scss
+++ b/_src/assets/scss/main.scss
@@ -2,7 +2,7 @@
 @import 'core/links';
 
 body {
-	background: linear-gradient(to bottom, rgb(41, 122, 68), rgb(231, 229, 85));
+	background: linear-gradient(to left, rgb(59, 202, 207),rgb(21, 132, 146));
 	margin: 0;
 	padding: 0;
 	height: 100vh;
@@ -10,30 +10,40 @@ body {
 	flex-direction: column;
 	align-items: center;
 	font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-	font-size: 10px;
+	font-size: 16px;
 	list-style: symbols();
+}
+
+.header{
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	margin: 1vw 1vw 2vw 1vw;
 }
 
 .main-title{
 	margin: 30px;
-	font-size: xx-large;
+	font-size: 5vw;
 	color: rgb(2, 51, 9);
 	font-style: oblique;
 }
+
+.instructions{
+	margin: 2px;
+
+}
+
 .form{
 	margin: 15px;
 	display: flex;
 	justify-content: center;
 }
 
-p{
-	margin: 2px;
-}
-
 .board{
 	border: 2px rgb(104, 11, 26) dotted;
 	width: 100vw;
-	height: 75vh;
+	height: 100vh;
+	// height: auto;
 	display: flex;
 	justify-content: center;
 	align-items: center;
@@ -41,46 +51,83 @@ p{
 }
 
 .cards{
-	border: medium blue solid;
-	// margin: 30px;
-	display: flex;
-	flex-direction: row;
-	flex-wrap: wrap;
-	// justify-content: center;
-	align-content: center;
-	width: 100%;
-	height: 100%;
+	border: 3px blue solid;
+	justify-items: center;
+	align-items: center;
+	// width: 90vw;
+	// height: 90vh;
 	list-style: none;
+	padding: 0;
+	// max-width: 1300px;
+	display: grid;
+}
+.table6{
+	height: 85vw;
+	width: 90vw;
+	grid-template-columns: 1fr 1fr 1fr;
+	grid-template-rows: 1fr 1fr;
+	grid-gap: 2vw;
+	margin: -30vw 0 0 0;
+	// margin-top: 50vw;
+	// grid-auto-flow: column;
+	border: 3px dotted rgb(226, 20, 233);
+}
+
+.table12{
 	// display: grid;
-	// grid-template-columns: 1fr 1fr 1fr 1fr;
-	// grid-template-rows: 1fr 1fr;
+	height: 180vw;
+	width: 90vw;
+	grid-template-columns: repeat(3, 1fr);
+	grid-template-rows: repeat(4, 1fr);
+	grid-gap: 2vw;
+	margin: 0vw;
+	// grid-auto-flow: column;
+	border: 3px dotted rgb(226, 20, 233);
+	grid-auto-columns: initial;
+}
+
+.table20{
+	// display: grid;
+	height: 180vw;
+	width: 94vw;
+
+	grid-template-columns: repeat(4, 1fr);
+	grid-template-rows: repeat(5, 1fr);
 	// grid-gap: 10px;
 	// grid-auto-flow: column;
-	// max-width: 1300px;
+	border: 3px dotted rgb(226, 20, 233);
 }
 
 
 .card{
-	border: 1.5px black solid;
-	// border-radius: 10px;
-	height: 5rem;
-	width: 3.75rem;
+	border: 3px black solid;
+	border-radius: 10px;
+	// height: 5rem;
+	// width: 3.75rem;
+	height: 90%;
+	width: 90%;
 	// display: flex;
 	// flex-direction: column;
-	align-items: center;
 	// justify-content: center;
-	background-image: url("../images/emote_smile.png");
+	// background-image: url("../images/emote_smile.png");
+	background: radial-gradient(white, rgb(21, 132, 146), );
 	// max-width: 189px;
 	// min-width: 181px;
 	// min-height: 189px;
 	
 }
 
+
 .card:hover{
-	border: 2px solid black;
-	box-shadow: inset 0px 0px 0px 1px tomato;
-	box-sizing: border-box;
+	box-sizing: content-box;
+	// border: 2px solid black;
+	box-shadow: inset 0px 0px 0px 1px rgb(241, 219, 13);
 	cursor: pointer;
+}
+
+.img-container{
+	width: 100%;
+	height: 100%;
 }
 
 .poke-img{
@@ -88,9 +135,10 @@ p{
 	width: 100%;
 	height: 100%;
 	background-color: blanchedalmond;
-	border: 2px rgb(51, 145, 71) solid;
+	border: 1.2vw rgb(11, 82, 92) solid;
 	border-radius: 5px;
 	opacity: 0;
+	// opacity: 100%;
 	// min-height: 189px;
 }
 .poke-name{
