--- a/_src/templates/index.html
+++ b/_src/templates/index.html
@@ -8,22 +8,43 @@
     <link rel="stylesheet" href="./assets/css/main.css" />
   </head>
   <body>
-    <h2 class="main-title">Emparejando</h2>
-    <p>¿Con cuántas cartas quieres jugar?</p>
-    <p>dale a comenzar y... ¡empieza a memorizar!</p>
-    <form class="form" name="form">
-      <label for="four">4</label>
-      <input type="radio" id="four" class="js-numberOfCards cartas" name="cardsNumber" value="4">
-      <label for="six">6</label>
-      <input type="radio" id="six" class="js-numberOfCards cartas" name="cardsNumber" value="6" checked>
-      <label for="eight">8</label>
-      <input type="radio" id="eight" class="js-numberOfCards cartas" name="cardsNumber" value="8">
-      <input type="button" value="Comenzar" class="button js-button">
+    <header class="header">
+      <h1 class="main-title">El juego de Carolina</h1>
+      <p class="instructions">¿Con cuántas cartas quieres jugar?</p>
+      <p class="instructions">dale a comenzar y... ¡empieza a memorizar!</p>
+    </header>
 
+    <form class="form" name="form">
+      <label for="six">6</label>
+      <input
+        type="radio"
+        id="six"
+        class="js-numberOfCards cartas"
+        name="cardsNumber"
+        value="table6"
+      />
+      <label for="twelve">12</label>
+      <input
+        type="radio"
+        id="twelve"
+        class="js-numberOfCards cartas"
+        name="cardsNumber"
+        value="table12"
+        checked
+      />
+      <label for="twenty">20</label>
+      <input
+        type="radio"
+        id="twenty"
+        class="js-numberOfCards cartas"
+        name="cardsNumber"
+        value="table20"
+      />
+      <input type="button" value="Comenzar" class="button js-button" />
     </form>
-    <main class="board">
+    <main class="board js-cards">
       <!-- <ul class="js-cards cards"></ul> -->
-      <ul class="js-cards cards"></ul>
+      <!-- <ul class="js-cards cards"></ul> -->
       <!-- <table>
         <tr>
           <th>
@@ -94,7 +115,6 @@
           </th>
         </tr>
       </table> -->
-
     </main>
     <script src="./assets/js/main.js"></script>
   </body>
