--- a/_src/templates/index.html
+++ b/_src/templates/index.html
@@ -11,7 +11,7 @@
     <header class="header">
       <h1 class="main-title">El juego de Carolina</h1>
       <p class="instructions">¿Con cuántas cartas quieres jugar?</p>
-      <p class="instructions">dale a comenzar y... ¡empieza a memorizar!</p>
+      <p class="instructions">Dale a comenzar y... ¡empieza a memorizar!</p>
     </header>
 
     <form class="form" name="form">
