Add responsive for laptop and change cards color

--- a/_src/assets/scss/main.scss
+++ b/_src/assets/scss/main.scss
@@ -23,9 +23,11 @@ body {
 
 .main-title{
 	margin: 30px;
-	font-size: 5vw;
+	font-size: 3vh;
 	color: rgb(2, 51, 9);
-	font-style: oblique;
+	font-family: 'Satisfy', cursive;
+	// font-style: oblique;
+	// text-transform: uppercase;
 }
 
 .instructions{
@@ -40,18 +42,19 @@ body {
 }
 
 .board{
-	border: 2px rgb(104, 11, 26) dotted;
+	// border: 2px rgb(104, 11, 26) dotted;
 	width: 100vw;
 	height: 100vh;
 	// height: auto;
 	display: flex;
 	justify-content: center;
 	align-items: center;
+	margin-bottom: 1rem;
 
 }
 
 .cards{
-	border: 3px blue solid;
+	// border: 3px blue solid;
 	justify-items: center;
 	align-items: center;
 	// width: 90vw;
@@ -60,10 +63,11 @@ body {
 	padding: 0;
 	// max-width: 1300px;
 	display: grid;
+	// border: 3px dotted rgb(226, 20, 233);
 }
 .table6{
-	height: 180vw;
-	width: 90vw;
+	height: 150vw;
+	width: 60vw;
 	grid-template-columns: 1fr 1fr;
 	grid-template-rows: 1fr 1fr 1fr;
 
@@ -71,15 +75,14 @@ body {
 	// margin: -30vw 0 0 0;
 	// margin-top: 50vw;
 	// grid-auto-flow: column;
-	border: 3px dotted rgb(226, 20, 233);
 
-	// @media all and (min-width: 678px){
-	// 	height: 85vw;
-	// 	width: 90vw;	
-	// 	grid-template-columns: 1fr 1fr 1fr;
-	// 	grid-template-rows: 1fr 1fr;
+	@media all and (min-width: 678px){
+		height: 75vh;
+		width: 80vh;	
+		grid-template-columns: 1fr 1fr 1fr;
+		grid-template-rows: 1fr 1fr;
 
-	// }
+	}
 }
 
 .table12{
@@ -89,10 +92,19 @@ body {
 	grid-template-columns: repeat(3, 1fr);
 	grid-template-rows: repeat(4, 1fr);
 	grid-gap: 2vw;
-	margin: 0vw;
+	// margin: 0, 0, 20vw, 0;
 	// grid-auto-flow: column;
-	border: 3px dotted rgb(226, 20, 233);
+	// border: 3px dotted rgb(226, 20, 233);
 	grid-auto-columns: initial;
+
+	@media all and (min-width: 678px){
+		height: 75vh;
+		width: 80vh;	
+		grid-template-columns: repeat(4, 1fr);
+		grid-template-rows: repeat(3, 1fr);
+		margin-bottom: 1rem;
+	}
+
 }
 
 .table20{
@@ -104,12 +116,22 @@ body {
 	grid-template-rows: repeat(5, 1fr);
 	// grid-gap: 10px;
 	// grid-auto-flow: column;
-	border: 3px dotted rgb(226, 20, 233);
+	// border: 3px dotted rgb(226, 20, 233);
+
+	@media all and (min-width: 678px){
+		height: 560px;
+		width: 595px;	
+		grid-template-columns: repeat(5, 1fr);
+		grid-template-rows: repeat(4, 1fr);
+		grid-auto-flow: column;
+		margin: 0;
+	}
+
 }
 
 
 .card{
-	border: 3px black solid;
+	border: 1px rgba(240, 237, 192, 0.8) solid;
 	border-radius: 10px;
 	// height: 5rem;
 	// width: 3.75rem;
@@ -120,6 +142,9 @@ body {
 	// justify-content: center;
 	// background-image: url("../images/emote_smile.png");
 	background: radial-gradient(white, rgb(21, 132, 146), );
+	background: linear-gradient(217deg, rgba(238, 94, 173, 0.8), rgba(245, 119, 188, 0) 70.71%),
+	linear-gradient(127deg, rgba(240, 237, 192, 0.8), rgba(0,255,0,0) 70.71%),
+	linear-gradient(336deg, rgba(74, 11, 116, 0.8), rgba(0,0,255,0) 70.71%);
 	// max-width: 189px;
 	// min-width: 181px;
 	// min-height: 189px;
@@ -130,7 +155,7 @@ body {
 .card:hover{
 	box-sizing: content-box;
 	// border: 2px solid black;
-	box-shadow: inset 0px 0px 0px 1px rgb(241, 219, 13);
+	box-shadow: inset 0px 0px 0px 1px whitesmoke;
 	cursor: pointer;
 }
 
@@ -144,7 +169,9 @@ body {
 	width: 100%;
 	height: 100%;
 	background-color: blanchedalmond;
-	border: 1.2vw rgb(11, 82, 92) solid;
+	// border: 0.4rem rgb(11, 82, 92) solid;
+	border: 3.5px rgba(5, 5, 92, 0) solid;
+
 	border-radius: 5px;
 	opacity: 0;
 	// opacity: 100%;
