--- a/_src/templates/index.html
+++ b/_src/templates/index.html
@@ -4,8 +4,9 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Emparejando</title>
-    <link rel="icon" href="./favicon-smile.png" />
+    <link rel="icon" href="./smile.png" />
     <link rel="stylesheet" href="./assets/css/main.css" />
+    <link href="https://fonts.googleapis.com/css2?family=Fredericka+the+Great&family=Sacramento&family=Satisfy&display=swap" rel="stylesheet">
   </head>
   <body>
     <header class="header">
