--- a/_src/assets/scss/main.scss
+++ b/_src/assets/scss/main.scss
@@ -54,7 +54,7 @@ body {
 }
 
 .cards{
-	// border: 3px blue solid;
+	border: 3px blue solid;
 	justify-items: center;
 	align-items: center;
 	// width: 90vw;
@@ -77,8 +77,8 @@ body {
 	// grid-auto-flow: column;
 
 	@media all and (min-width: 678px){
-		height: 75vh;
-		width: 80vh;	
+		height: 65vh;
+		width: 65vh;	
 		grid-template-columns: 1fr 1fr 1fr;
 		grid-template-rows: 1fr 1fr;
 
@@ -119,8 +119,8 @@ body {
 	// border: 3px dotted rgb(226, 20, 233);
 
 	@media all and (min-width: 678px){
-		height: 560px;
-		width: 595px;	
+		height: 90vh;
+		width: 70vh;	
 		grid-template-columns: repeat(5, 1fr);
 		grid-template-rows: repeat(4, 1fr);
 		grid-auto-flow: column;
