--- a/_src/assets/scss/main.scss
+++ b/_src/assets/scss/main.scss
@@ -54,7 +54,7 @@ body {
 }
 
 .cards{
-	border: 3px blue solid;
+	// border: 3px blue solid;
 	justify-items: center;
 	align-items: center;
 	// width: 90vw;
@@ -76,7 +76,7 @@ body {
 	// margin-top: 50vw;
 	// grid-auto-flow: column;
 
-	@media all and (min-width: 678px){
+	@media all and (min-width: 480px){
 		height: 65vh;
 		width: 65vh;	
 		grid-template-columns: 1fr 1fr 1fr;
@@ -97,7 +97,7 @@ body {
 	// border: 3px dotted rgb(226, 20, 233);
 	grid-auto-columns: initial;
 
-	@media all and (min-width: 678px){
+	@media all and (min-width: 480px){
 		height: 75vh;
 		width: 80vh;	
 		grid-template-columns: repeat(4, 1fr);
@@ -118,7 +118,7 @@ body {
 	// grid-auto-flow: column;
 	// border: 3px dotted rgb(226, 20, 233);
 
-	@media all and (min-width: 678px){
+	@media all and (min-width: 480px){
 		height: 90vh;
 		width: 70vh;	
 		grid-template-columns: repeat(5, 1fr);
