Change fonts and clean

--- a/_src/templates/index.html
+++ b/_src/templates/index.html
@@ -6,7 +6,9 @@
     <title>Emparejando</title>
     <link rel="icon" href="./smile.png" />
     <link rel="stylesheet" href="./assets/css/main.css" />
-    <link href="https://fonts.googleapis.com/css2?family=Fredericka+the+Great&family=Sacramento&family=Satisfy&display=swap" rel="stylesheet">
+    <!-- <link href="https://fonts.googleapis.com/css2?family=Fredericka+the+Great&family=Sacramento&family=Satisfy&display=swap" rel="stylesheet"> -->
+    <link href="https://fonts.googleapis.com/css2?family=Pacifico&family=Roboto&family=Satisfy&display=swap" rel="stylesheet">
+
   </head>
   <body>
     <header class="header">
