--- a/_src/assets/scss/main.scss
+++ b/_src/assets/scss/main.scss
@@ -23,16 +23,25 @@ body {
 
 .main-title{
 	margin: 30px;
-	font-size: 3vh;
 	color: rgb(2, 51, 9);
 	font-family: 'Satisfy', cursive;
-	// font-style: oblique;
-	// text-transform: uppercase;
+	// font-size: 3vw;
+	font-size: 2rem;
+	@media all and (min-width: 480px){
+		font-size: 3rem;
+	}
 }
 
 .instructions{
 	margin: 2px;
+	// font-family: 'Pacifico', cursive;
+	font-family: 'Roboto', sans-serif;
+	// font-size: 2vw;
+	font-size: 1rem;
 
+	@media all and (min-width: 480px){
+		font-size: 1.4rem;
+	}
 }
 
 .form{
@@ -164,7 +173,7 @@ body {
 	height: 100%;
 }
 
-.poke-img{
+.card-img{
 	box-sizing: border-box;
 	width: 100%;
 	height: 100%;
@@ -177,9 +186,9 @@ body {
 	// opacity: 100%;
 	// min-height: 189px;
 }
-.poke-name{
-	text-transform: capitalize;
-}
+// .poke-name{
+// 	text-transform: capitalize;
+// }
 .open{
 	opacity: 100%;
 }
